<resources>
    <item name="adView" type="id" />
    <string name="app_name">Warface Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Options</string>
    <string name="ad_attribution">Ad</string>
    <string name="interstitial_full_screen">ca-app-pub-4140002463111288/3644037371</string>
    <string name="news_link">https://pc.warface.com/en/rss.xml</string>
    <string name="about_text">
<![CDATA[This application is not a product of Crytek.<br><br>

The application contains the information on the achievements of the project Warface <br><br>

<font color=#e65d20>Legal notice</font><br><br>

Privacy Policy <a href="https://berdyansk.pro/android/wardocwarface/privacy/privacy_policy.html">read.</a><br><br>

Copyright contain images and materials are owned by Crytek and are the intellectual property of Crytek: © 2021 Crytek GmbH. All rights reserved.<br><br>

Crytek, CryEngine, Warface and the Warface logo are registered trademarks or trademarks of Crytek.<br><br>

<font color=#e65d20>Additional information</font><br><br>

- Current version: 3.2.1<br>
- Developer: RB dev.<br>
- Contact: ram219219@gmail.com]]>
</string>

    <string name="start_text">
   <![CDATA[
        <font color=#e65d20>Hello! Donate the app!</font><br><br>
        Warface Assistant is completely free and only supported by your donations.<br><br>
        If you liked the application, donate it, it will motivate us.
    ]]>
    </string>

    <string name="star_dialog">
    <![CDATA[
    - Add English
    ]]>
    </string>

    <!-- Menu string -->
    <string name="menu_about">ABOUT</string>
    <string name="menu_ranks">RANKS</string>
    <string name="menu_achievements">ACHIEVEMENTS</string>
    <string name="menu_update">DONATE</string>
    <string name="menu_news">NEWS</string>
    <string name="menu_statistics">STATISTICS</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_locations">LOCATIONS</string>
    <string name="menu_rifleman">RIFLEMAN</string>
    <string name="menu_sniper">SNIPER</string>
    <string name="menu_medic">MEDIC</string>
    <string name="menu_enginer">ENGINER</string>
    <string name="menu_additional">PISTOLS</string>
    <string name="menu_warbaks">Warbaks</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_box">Box</string>
    <string name="menu_mark">Mark</string>
    <string name="menu_badge">Badge</string>
    <string name="menu_string">String</string>
    <string name="menu_spec">Operation</string>
    <string name="menu_domin">Domination</string>
    <string name="menu_podriv">Undermining</string>
    <string name="menu_comand">Command</string>
    <string name="menu_mysorubka">Chopper</string>
    <string name="menu_unicht">Destruction</string>
    <string name="menu_zahvat">Capture</string>
    <string name="menu_shturm">Storm</string>
    <string name="menu_viziv">Survival</string>
    <string name="menu_bliz">Blitz</string>
    <string name="menu_king">King</string>

   <!-- Statistics text -->
   <string name="statistics_text">
   <![CDATA[
        <b> How do I add a nickname? </b> <br> <br>
         To track statistics, you need to add name. <br> <br>
         Information about statistics is public information and does not require entering a password. <br> <br>
         Statistics may not be available if it was hidden in the account settings on the Warface website.
    ]]>
   </string>

    <!-- Error string -->
    <string name="error_connection">NO CONNECTION</string>

    <!-- Donate buttons -->
    <string name="donate_button_one">Recruit</string>
    <string name="donate_button_two">Sergeant</string>
    <string name="donate_button_three">Lieutenant</string>
    <string name="donate_button_four">Marshal</string>
    <string name="donate_message_thank">Thanks for the donation! Your support is important to us.</string>
    <string name="donate_message_cancel">Donate is being canceled.</string>
    <string name="donate_message_retry">An error occurred! Please try again later.</string>

    <!-- Statistics fragment -->
    <string name="statistics_button_alfa">Server EU</string>
    <string name="statistics_button_bravo">Server EN</string>
    <string name="statistics_button_charli">-</string>
    <string name="statistics_button_add">Add</string>
    <string name="statistics_button_delete">Remove</string>
    <string name="statistics_text_field">Game nickname</string>
    <string name="statistics_message_emptyfield">Error: empty field</string>
    <string name="statistics_message_usernotfound">Error: user not found</string>
    <string name="statistics_message_useradd">User added</string>
    <string name="statistics_message_userdeleted">User deleted</string>
    <string name="statistics_rank">Rank</string>
    <string name="statistics_experience">Experience</string>
    <string name="statistics_clanname">Clan name</string>
    <string name="statistics_kills">Kills</string>
    <string name="statistics_friendlykills">Friendly kills</string>
    <string name="statistics_death">Death</string>
    <string name="statistics_playtimeh">Play time hours</string>
    <string name="statistics_playtimem">Playtime minutes</string>

    <string name="statistics_pvptitle">Statistics PVP</string>
    <string name="statistics_killsdeath">Kills/Death</string>
    <string name="statistics_pvpwins">Win</string>
    <string name="statistics_pvplost">Lost</string>
    <string name="statistics_pvpwl">Win/Lost</string>
    <string name="statistics_pvpall">Matches</string>
    <string name="statistics_pvpfavorite">Favorite class</string>

    <string name="statistics_pvetitle">Statistics PVE</string>
    <string name="statistics_pve">Kiils/Death</string>
    <string name="statistics_pvewins">Wins</string>
    <string name="statistics_pvelost">Lost</string>
    <string name="statistics_pveall">Matches</string>
    <string name="statistics_pvekill">Kill</string>
    <string name="statistics_pvefriendlykills">Friendly kills</string>
    <string name="statistics_pvedeath">Death</string>
    <string name="statistics_pvefavorite">Favorite class</string>

   <!-- Settings -->
   <string name="rewarded_text">
          <![CDATA[
             <font color=#712123> Premium feature.</font><br><br>
              Want to turn off ads for 24 hours in the app? Please watch the video!
          ]]>
      </string>
   <string name="rewarded_button">Disable ads for 24 hours</string>
   <string name="rewarded_message">Ads disabled for 24 hours</string>
   <string name="rewarded_tab">Ads</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
