<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <item android:title="СТАТИСТИКА"
        android:id="@+id/nav_item_stats"
        android:icon="@drawable/ach_icn"/> -->

    <item android:title="@string/menu_rifleman"
        android:id="@+id/nav_item_rifleman"
        android:icon="@drawable/rfl_icn"/>

    <item android:title="@string/menu_sniper"
        android:id="@+id/nav_item_sniper"
        android:icon="@drawable/rfl_snp"/>

    <item android:title="@string/menu_medic"
        android:id="@+id/nav_item_medic"
        android:icon="@drawable/mdc_icn"/>
    
    <item android:title="@string/menu_enginer"
        android:id="@+id/nav_item_enginer"
        android:icon="@drawable/eng_icn"/>

    <item android:title="@string/menu_news"
        android:id="@+id/nav_item_news"
        android:icon="@drawable/nws_icn"/>

    <item android:title="@string/menu_vloger"
        android:id="@+id/nav_item_stremers"
        android:icon="@drawable/st_icn"/>

    <item android:title="@string/menu_achievements"
        android:id="@+id/nav_item_achivment"
        android:icon="@drawable/abt_icn"/>

    <item android:title="@string/menu_ranks"
        android:id="@+id/nav_item_rang"
        android:icon="@drawable/rng_icn"/>

    <item android:title="@string/menu_locations"
        android:id="@+id/nav_item_maps"
        android:icon="@drawable/mp_icn"/>

    <item android:title="@string/menu_update"
        android:id="@+id/nav_item_update"
        android:icon="@drawable/upd_icn"/>

    <item android:title="@string/menu_about"
        android:id="@+id/nav_item_about"
        android:icon="@drawable/ach_icn"/>

</menu>