<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- <item android:title="СТАТИСТИКА"
        android:id="@+id/nav_item_stats"
        android:icon="@drawable/ach_icn"/> -->

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_rifleman"
            android:checked="false"
            android:id="@+id/nav_item_rifleman"
            android:icon="@drawable/rfl_icn"/>

        <item android:title="@string/menu_sniper"
            android:checked="false"
            android:id="@+id/nav_item_sniper"
            android:icon="@drawable/rfl_snp"/>

        <item android:title="@string/menu_medic"
            android:checked="false"
            android:id="@+id/nav_item_medic"
            android:icon="@drawable/mdc_icn"/>

        <item android:title="@string/menu_enginer"
            android:checked="false"
            android:id="@+id/nav_item_enginer"
            android:icon="@drawable/eng_icn"/>

        <item android:title="@string/menu_additional"
            android:checked="false"
            android:id="@+id/nav_item_additional"
            android:icon="@drawable/eng_icn"/>

        <item android:title="@string/menu_news"
            android:checked="true"
            android:id="@+id/nav_item_news"
            android:icon="@drawable/nws_icn"/>

        <item android:title="@string/menu_statistics"
            android:checked="false"
            android:id="@+id/nav_item_statistics"
            android:icon="@drawable/statistics_icon"/>

        <item android:title="@string/menu_achievements"
            android:checked="false"
            android:id="@+id/nav_item_achivment"
            android:icon="@drawable/abt_icn"/>

        <item android:title="@string/menu_ranks"
            android:checked="false"
            android:id="@+id/nav_item_rang"
            android:icon="@drawable/rng_icn"/>

        <item android:title="@string/menu_locations"
            android:checked="false"
            android:id="@+id/nav_item_maps"
            android:icon="@drawable/mp_icn"/>

        <item android:title="@string/menu_update"
            android:checked="false"
            android:id="@+id/nav_item_update"
            android:icon="@drawable/upd_icn"/>

        <item android:title="@string/menu_settings"
            android:checked="false"
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/settings_icon"/>

        <item android:title="@string/menu_about"
            android:checked="false"
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ach_icn"/>
    </group>

</menu>