<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/edit_text"
                android:hint="@string/statistics_text_field"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="250dp"
                android:layout_marginRight="10dp"
                android:background="@color/bar"
                android:imeOptions="actionNext"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                app:backgroundTint="@null"
                android:background="@drawable/button_donate_click"
                android:textColor="@drawable/button_donate_click"
                android:text="@string/statistics_button_add"
                android:textSize="15sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="15sp"
            android:textColor="@color/error_red"
            android:text="" />
        <RadioGroup
            android:id="@+id/radio_group_server"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="7dp">
            <RadioButton
                android:id="@+id/button_server_alfa"
                android:tag="1"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:button="@null"
                app:backgroundTint="@null"
                android:background="@drawable/button_server_click"
                android:textColor="@drawable/button_server_click"
                android:text="@string/statistics_button_alfa"
                android:textSize="15sp" />
            <RadioButton
                android:id="@+id/button_server_bravo"
                android:tag="2"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:button="@null"
                app:backgroundTint="@null"
                android:background="@drawable/button_server_click"
                android:textColor="@drawable/button_server_click"
                android:text="@string/statistics_button_bravo"
                android:textSize="15sp" />
            <RadioButton
                android:id="@+id/button_server_charli"
                android:tag="3"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                app:backgroundTint="@null"
                android:background="@drawable/button_server_click"
                android:textColor="@drawable/button_server_click"
                android:text="@string/statistics_button_charli"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:text="@string/statistics_text" />

    </LinearLayout>
</ScrollView>